WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137399
webkit-appearance: default-button styling does not set the button font color to white
https://bugs.webkit.org/show_bug.cgi?id=137399
Summary
webkit-appearance: default-button styling does not set the button font color ...
Dean Jackson
Reported
2014-10-03 13:11:07 PDT
webkit-appearance: default-button styling does not set the button font color to white
Attachments
Patch
(7.42 KB, patch)
2014-10-03 13:19 PDT
,
Dean Jackson
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-10-03 13:19:11 PDT
Created
attachment 239222
[details]
Patch
Dean Jackson
Comment 2
2014-10-03 13:19:40 PDT
rdar://problem/17788616
WebKit Commit Bot
Comment 3
2014-10-03 13:20:33 PDT
Attachment 239222
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/style/RenderStyle.h:468: _insideDefaultButton is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 4
2014-10-03 13:23:42 PDT
Comment on
attachment 239222
[details]
Patch r=me
Dean Jackson
Comment 5
2014-10-03 13:27:48 PDT
Committed
r174283
: <
http://trac.webkit.org/changeset/174283
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug