webkit-appearance: default-button styling does not set the button font color to white https://bugs.webkit.org/show_bug.cgi?id=137399 rdar://problem/17788616

Reviewed by Dave Hyatt.

When a button is styled with -webkit-appearance: default-button, it should
use the CSSValueActivebuttontext value for its text color when the window
is active, and the normal value when the window is inactive.

Since activating (focus/blur) windows doesn't cause a style recalculation, this
is applied as a paint-time operation. However, the render tree children that
paint the text don't know that they are contained within a RenderButton
and that the button is a default type. So I added an inherited flag, similar
to what we use for visited links, to remember if we're in a button. And then
computeTextPaintStyle chooses the correct value.

We can't test this because our LayoutTest system doesn't have
an active window, and thus the default button renders like a normal
button. This should cause no regressions though. Also, the appearance is
protected behind an SPI (or Setting), so this is not exposed to the Web.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::adjustStyle): Set the flag if we're inside a default button.
* rendering/TextPaintStyle.cpp:
(WebCore::computeTextPaintStyle): If we're in a default button inside an active window,
use the CSSValueActivebuttontext color.
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::RenderStyle): Add and expose the new inherited flag: ._insideDefaultButton.
(WebCore::RenderStyle::changeRequiresRepaint): Ditto.
* rendering/style/RenderStyle.h: Ditto.

Canonical link: https://commits.webkit.org/155199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174283 268f45cc-cd09-0410-ab3c-d52691b4dbfc